Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Virtual_Account__c/Virtual_Account__c.object-meta.xml
<CustomObject>
    <label>Virtual Account</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Virtual Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>