Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Virtual_Account__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <label>Bank Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>