Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Virtual_Account__c/fields/BankVerificationNumber__c.field-meta.xml
<CustomField>
    <fullName>BankVerificationNumber__c</fullName>
    <label>BankVerificationNumber</label>
    <length>40</length>
    <type>Text</type>
</CustomField>