Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Virtual_Account__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <displayFormat>V-{0000}</displayFormat>
    <label>Id</label>
    <type>AutoNumber</type>
</CustomField>