Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Virtual_Account__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>