Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Virtual_Account__c/fields/WalletId__c.field-meta.xml
<CustomField>
    <fullName>WalletId__c</fullName>
    <label>Wallet id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>