Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Virtual_Account__c/fields/WalletName__c.field-meta.xml
<CustomField>
    <fullName>WalletName__c</fullName>
    <label>Wallet Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>