Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Virtual_Account__c/recordTypes/New.recordType-meta.xml
<RecordType>
    <fullName>New</fullName>
    <active>true</active>
    <label>New</label>
</RecordType>