Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Virtual_Account__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>false</active>
    <label>Standard</label>
</RecordType>