Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Virtual_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountNumber__c</columns>
    <columns>Reference__c</columns>
    <columns>Email__c</columns>
    <columns>WalletName__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>